# cpp_project

./: 2_Créer une classe Asteroid.adoc  3_Créer une classe Missile.adoc  4_Implémenter la collision entre un missile et un astéroïde.adoc  5_Créer une classe Spaceship.adoc  6_Implémenter un modèle MVC - Le Contrôleur.adoc  7_Implémenter un modèle MVC - Le Modèle.adoc  Asteroid.cpp  Asteroid.hpp  CMakeLists.txt  Controller.cpp  Controller.hpp  FlyingObject.cpp  FlyingObject.hpp  Missile.cpp  Missile.hpp  Model.cpp  Model.hpp  README.adoc  README.md  Spaceship.cpp  Spaceship.hpp  View.cpp  View.hpp  asteroid.cpp  asteroid.hpp  controller.cpp  controller.hpp  framework.cpp  main.cpp
include/SDL2/: SDL.h  SDL_events.h  SDL_gamecontroller.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_metal.h  SDL_sensor.h  SDL_video.h
